# ascii_media_player

./: .gitignore  CMakeLists.txt  README.md  main.cpp  screen.h  video_loader.cpp  video_loader.h
